--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -499,7 +499,7 @@ We get the system of equations
 the catalytic ratio is
 \begin{equation}
 	\eta = \Theta\dfrac{\mu_7-r_0\mu_6}{r_0 h_0 \Upsilon_6-h_0\Upsilon_7} 
-	= \dfrac{\Theta\mu_7}{h_0\Upsilon_7} \dfrac{1-\sigma r_0}{r_0\kappa-1}
+	= \dfrac{\Theta\mu_7}{h_0\Upsilon_7} \underbrace{\dfrac{1-\sigma r_0}{r_0\kappa-1}}_{f_0}
 \end{equation}
 
 {
@@ -516,6 +516,17 @@ the catalytic ratio is
 \end{equation}
 }
 
+\item The system imposes $\beta_x\geq\Theta$, shown by the two expressions of $\hat\alpha_\infty$, and because the catalytic process imposes a boost with respect to the $\Theta$ level.
+If we set
+\begin{equation}
+	\hat\alpha_\infty = \cos^2\theta_\infty \cos^2\psi + \sin^2\psi, \;\;\cos^2\theta_\infty = \dfrac{1}{1+\sum_x\epsilon_x h_\infty \Upsilon_x}
+\end{equation}
+then $\psi$ is the quadratic coupling factor, since
+\begin{equation}
+	\sum_x \epsilon_x Q_x \beta_x^\infty = \dfrac{\tan^2\psi}{\cos^2\theta_\infty}
+\end{equation}
+
+\color{Violet}
 \item We also have
 \begin{equation}
 \left\lbrace
