--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -540,6 +540,7 @@ We use
  \\
  & = & h_0\Upsilon_7 \dfrac{ \epsilon \sigma \left[\beta_6 - \Theta\right] + (1-\epsilon) \left[\beta_7 - \Theta\right]}
  {\Theta f_0}\\
+ & = & h_0 \Upsilon_7 Z_\kappa\\
  \end{array}
  \right.
 \end{equation}
