--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -504,7 +504,7 @@ Without catalytic process, $r_0$ cannot be lower than $\dfrac{1}{\sigma}$,
 \right.
 }
 \end{equation}
-which is quite normal, the intake speedup of $\spLi{6}$ must be itself greater than its leakage speedup!
+%which is quite normal, the intake speedup of $\spLi{6}$ must be itself greater than its leakage speedup!
 We define
 \begin{equation}
 	\Upsilon_6  = \kappa \Upsilon_7
@@ -520,6 +520,7 @@ and
 	,\;\; r_0 < \frac{1}{\sigma}, \;\; \kappa > \frac{1}{r_0}
 	}
 \end{equation}
+which are the conditions arising from a catalytic speedup...
 
 \item The system imposes $\beta_x\geq\Theta$, shown by the two expressions of $\hat\alpha_\infty$, and because the catalytic process imposes a boost with respect to the $\Theta$ level.
 If we set
