--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -517,7 +517,7 @@ and
 \begin{equation}
 	\boxed{
 	\eta = \dfrac{\mu_7\Theta}{h_0\Upsilon_7} \dfrac{1-r_0\sigma}{\kappa r_0-1} = \dfrac{\mu_7\Theta}{h_0\Upsilon_7} f_0
-	,\;\; r_0 < \frac{1}{\sigma}, \;\; \kappa > \frac{1}{r_0}
+	,\;\; r_0 < \frac{1}{\sigma}, \;\; \kappa > \frac{1}{r_0} > \sigma
 	}
 \end{equation}
 which are the conditions arising from a catalytic speedup...
@@ -556,7 +556,7 @@ so that
 
 \begin{equation}
 	\beta_6^\infty = \Theta \left(1 + f_0 \dfrac{h_\infty}{h_0} \dfrac{\kappa}{\sigma}
-	\dfrac{\cos^2 B_7}{1+\left[\epsilon\kappa+(1-\kappa)\right] h_\infty \Upsilon_7 }
+	\dfrac{\cos^2 B_6}{1+\left[\epsilon\kappa+(1-\kappa)\right] h_\infty \Upsilon_7 }
 	\right)
 \end{equation}
 
@@ -596,176 +596,16 @@ Then
  \\
  \cos^2\psi & = & \dfrac{\sum_x \epsilon_x \Upsilon_x \cos^2 B_x }{\sum_x \epsilon_x \Upsilon_x} 
  = \dfrac{\epsilon\kappa\cos^2B_6+(1-\epsilon)\cos^2B_7}{\epsilon\kappa+(1-\epsilon)}\\
+ \\
+  & \in &  \left[\min\left(\cos^2B_6,\cos^2B_7\right):\max\left(\cos^2B_6,\cos^2B_7\right)\right] \\
 \end{array}
 \right.
 \end{equation}
 
 \end{itemize}
 
-\end{document}
+\section{Building a simulation}
 
-%%%%%%%%%%%%%
-
-\section{Solving}
-\color{blue}
-\subsection{Solving $\hat\alpha$}
-
-\subsubsection{Generic $\proton$}
-
-\begin{equation}
-	\Upsilon_\alpha = \sum_x \epsilon_x h_\infty \Upsilon_x,\;\;g(\tau) = 1+\Upsilon_\alpha h(\tau), \;\; \ig(\tau) = \int_0^\tau g(u) \, \mathrm{d} u
-\end{equation}
-
-\begin{equation}
-	\hat\alpha_1(\tau) = \left[ 1 + \int_0^{\tau} e^{\ig(u)}\,\mathrm{d} u\right] e^{-\ig(\tau)}
-\end{equation}
-
-\begin{equation}
-	\hat\alpha_\infty = \dfrac{1}{1+h_\infty \Upsilon_\alpha}
-\end{equation}
-
-\subsubsection{Constant $\proton$}
-\begin{equation}
-	\hat\alpha_0(\tau) = {\hat\alpha_0^\infty + \left(1-\hat\alpha_0^\infty\right) e^{-\Omega \tau} },
-	\;\;\Omega=1+h_0\Upsilon_\alpha>1,
-	\;\;\hat\alpha_0^\infty = \dfrac{1}{\Omega}
-\end{equation}
-
-\subsection{Solving $\beta_x$}
-
-\subsubsection{Generic $\proton$}
-Once $\hat\alpha$ is computed,
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-\beta_{x,1}(\tau) & = & \displaystyle \left[ \int_0^\tau \left( \mu_x \Theta + \eta \hat\alpha(u) h(u) \Upsilon_x \right)e^{\mu_x u} \, \mathrm{d} u \right] e^{-\mu_x\tau}\\
-\\
-& = & \displaystyle \Theta \left[ 1-e^{-\mu_x \tau}\right] + \eta \left[\int_0^\tau    \hat\alpha(u) h(u) \Upsilon_x  e^{\mu_x u} \, \mathrm{d} u\right] e^{-\mu_x \tau} 
-\end{array}
-\right.
-\end{equation}
-
-\subsubsection{Constant $\proton$}
-We set
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-	\Omega & = & 1 + h_0 \Upsilon_\alpha = 1 + \tan^2 \theta\\
-	h_0 \Upsilon_x & = & \rho_x \, \tan^2\theta\\
-	\rho_x & = & \dfrac{\Upsilon_x}{\epsilon\Upsilon_6+(1-\epsilon)\Upsilon_7}\\
-\end{array}
-\right.
-\end{equation}
-and we express
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-	\beta_{x,0}(\tau) & = & \displaystyle \Theta \left[ 1-e^{-\mu_x \tau}\right] + \eta h_0 \Upsilon_x
-	\left[ 
-	\left(
-	\int_0^\tau 
-	\hat\alpha_1^\infty e^{\mu_x u}
-	\, \mathrm{d} u
-	\right)
-	+
-	\left(
-	\int_0^\tau \left(1-\hat\alpha_1^\infty\right) e^{(\mu_x-\Omega) u} \, \mathrm{d} u
-	\right)
-	\right] e^{-\mu_x \tau} \\
-	\\
-	& = & \displaystyle \Theta \left[ 1-e^{-\mu_x \tau}\right] + \eta h_0 \Upsilon_x \left[
-	\dfrac{\hat\alpha_1^\infty}{\mu_x}\left(1-e^{-\mu_x \tau}\right)
-	+\dfrac{1-\hat\alpha_1^\infty}{\mu_x-\Omega}\left(e^{-\Omega\tau}-e^{-\mu_x\tau}\right)
-	\right]\\\\
-	& = & \displaystyle \Theta \left[ 1-e^{-\mu_x \tau}\right] + \eta \rho_x \tan^2\theta \left[
-	\cos^2\theta \left[\dfrac{1-e^{-\mu_x \tau}}{\mu_x}\right]
-	+\sin^2\theta\dfrac{\left(e^{-\frac{\tau}{\cos^2\theta}}-e^{-\mu_x\tau}\right)}{\mu_x-\frac{1}{\cos^2\theta}}
-	\right]\\
-	\\
-	& = & \displaystyle \Theta \left[ 1-e^{-\mu_x \tau}\right] + \eta \dfrac{\rho_x}{\mu_x} \sin^2\theta 
-	\left[
-	\left({1-e^{-\mu_x \tau}}\right) + \tan^2\theta
-	\left(
-	 \dfrac{e^{-\frac{\mu_x\tau}{\mu_x\cos^2\theta}}-e^{-\mu_x\tau}}{1-\frac{1}{\mu_x\cos^2\theta}}
-	 \right)
-	\right]
-	\end{array}
-\right.
-\end{equation}
-Using 
-\begin{equation}
-	B(u,\lambda) = \dfrac{e^{-\lambda u}-e^{-u}}{1-\lambda}
-\end{equation}
-and
-\begin{equation}
-	R(u) = 1-e^{-u}
-\end{equation}
-we write
-\begin{equation}
-		\beta_{x,0}(\tau) = \Theta R(\mu_x\tau) + \eta \dfrac{\rho_x}{\mu_x}  \left[ R(\mu_x\tau) +  B\left(\mu_x\tau,\frac{1}{\mu_x\cos^2\theta}\right)\tan^2\theta\right]\sin^2\theta
-\end{equation}
-We notice that
-\begin{equation}
-	\hat\alpha_0(\tau) = \cos^2\theta + \sin^2\theta e^{-\frac{\tau}{\cos^2\theta}}
-\end{equation}
-and the induction times arising from $\hat\alpha$ are hidden in the $B$ function.
-
-\section{Simulation...}
-
-\subsection{Reduced Equation}
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-	\partial_\tau \hat\alpha & = & 1 - \hat\alpha(\tau) \left[ 1 + \dfrac{\proton}{h_0} \tan^2\theta\right]\\
-	\\
-	\partial_\tau \beta_x    & = & \mu_x\left[\Theta-\beta_x(\tau)\right] + \hat\alpha(\tau) \underbrace{\eta \rho_x}_{\varphi_x} \dfrac{\proton}{h_0} \tan^2\theta
-	\\
-	\\
-	\hline
-	\\
-	\mu_6     & = & \sigma \mu_7\\
-	\varphi_6 & = & \kappa \varphi_7\\
-	\\
-	\hline
-	\\
-	\Theta    & = & e^{\frac{FV_m}{RT}} \simeq 4.47\\
-	\sigma    & \simeq & 1.00229 \\
-\end{array}
-\right.
-\end{equation}
-And for a given $\LiAllOut$,
-\begin{equation}
-	\LiAll = \left[ \epsilon \beta_6 + (1-\epsilon) \beta_7 \right] \LiAllOut
-\end{equation}
-
-TODO: potential influence....
-
-\subsection{Constraints}
-\subsubsection{Initial Values}
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-	\rho_0 & = &  \dfrac{\beta_7(0)}{\beta_6(0)} = \dfrac{\mu_7 \Theta + \varphi_7 \tan^2\theta}{\mu_6 \Theta + \varphi_6 \tan^2\theta} \\
-		\\
-		& = &  \dfrac{\mu_7 \Theta + \varphi_7 \tan^2\theta}{\sigma\mu_7 \Theta + \kappa\varphi_7 \tan^2\theta}\\
-		\\
-	\Rightarrow	\kappa & =  & \dfrac{\mu_7\Theta \left(1-\rho_0\sigma\right) + \varphi_7 \tan^2\theta}{\rho_0\varphi_7 \tan^2\theta} \\
-\end{array}
-\right.
-\end{equation}
-
-\subsubsection{Final Values}
-\begin{equation}
-\left\lbrace
-\begin{array}{rcl}
-	\rho_\infty & = &  \dfrac{\beta_7^\infty}{\beta_6^\infty} = \dfrac{\mu_7 \Theta + X \varphi_7 \tan^2\theta}{\mu_6 \Theta + X \varphi_6 \tan^2\theta} \\
-	\\
-	X & = & \hat\alpha_\infty \dfrac{h_\infty}{h_0}\\
-	\\
-	\Rightarrow	X & = & \\
-\end{array}
-\right.
-\end{equation}
 
 \end{document}
 
