--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -624,18 +624,27 @@ Then
 
 \subsection{Parameters To Choose}
 \begin{itemize}
-	\item We choose $r_0$ from the isotopic data
+	\item We choose/guess 
+	$$r_0>\dfrac{1}{\sigma}$$ 
+	from the isotopic data
 	
 	\item We choose 
 	\begin{equation}
 		\rho_\infty =  \dfrac{h_\infty}{h_0}
 	\end{equation}
 	\textbf{and there is an heuristic coupling with $\LiAllOut$}
+		
 	
 	\item We choose $\beta_7^\infty>\Theta$ so that
 	\begin{equation}
 		\dfrac{\beta_7^\infty}{\Theta}-1 = \tan^2 \gamma_7 % = f_0 	\rho_\infty \cos^2\Omega \cos^2\varphi_7
 	\end{equation}
+	
+	\item We choose 
+	$$
+		r_\infty = \dfrac{\beta_7^\infty}{\beta_6^\infty}
+	$$
+	so that $\beta_6^\infty=\beta_7^\infty/r_\infty$.
 	
 	\item We choose $\cos^2\Omega$ (\textbf{parameter}), when $\Omega=0$ means no intake 
 	%and we remember
@@ -643,12 +652,30 @@ Then
 %			\tan^2\Omega = h_\infty \Upsilon_7 \left[\epsilon\kappa+(1-\epsilon)\right]
 %		$$
 
-	\item We choose a linear level $\cos^2 \phi_7$
+	\item We choose a linear level $\cos^2 \varphi_7$
 	
 \end{itemize}
 
 \subsection{Parameters to compute}
 
+\begin{itemize}
+\item We deduce the factor
+\begin{equation}
+f_0  = \dfrac{\rho_\infty \cos^2\Omega \cos^2\varphi_7}{\tan^2 \gamma_7}
+\end{equation}
+
+\item We compute $\kappa$ since $f_0=\dfrac{1-r_0\sigma}{\kappa r_0-1}$
+\begin{equation}
+	\kappa = \dfrac{1}{r_0}\left( 1 + \dfrac{1-r_0\sigma}{f_0}\right)
+\end{equation}
+
+\item We compute
+\begin{equation}
+	h_0 \Upsilon_7 = \dfrac{\tan^2\Omega}{\rho_\infty\left[\epsilon\kappa+(1-\epsilon)\right]}
+\end{equation}
+
+
+\end{itemize}
 
 \subsection{older}
 
