implemented up to doc

--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -625,7 +625,7 @@ Then
 \subsection{Parameters To Choose}
 \begin{itemize}
 	\item We choose/guess 
-	$$r_0>\dfrac{1}{\sigma}$$ 
+	$$r_0<\dfrac{1}{\sigma}$$ 
 	from the isotopic data
 	
 	\item We choose 
