up to the computation of eta

--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -708,6 +708,10 @@ or
 	h_0 \Upsilon_6 = \kappa \; h_0 \Upsilon_7
 \end{equation}
 
+\item We compute
+$$
+	\eta = f_0 \dfrac{\mu_7 \Theta}{h_0\Upsilon_7}
+$$
 
 \end{itemize}
 
