everything seem alright

--- a/src/lithium/doc/lithium20.tex
+++ b/src/lithium/doc/lithium20.tex
@@ -573,14 +573,14 @@ then $\psi$ is the quadratic coupling factor, since
 	\sum_x \epsilon_x Q_x \beta_x^\infty = \dfrac{\tan^2\psi}{\cos^2\Omega}
 \end{equation}
 
-We deduce from each choice of $B_x$
+We deduce from each choice of $\varphi_x$
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
 	\eta (1-\hat\alpha_\infty) \beta_x^\infty Q_x & = & \eta \hat\alpha_\infty h_\infty \Upsilon_x - \mu_x\left(\beta_x^\infty - \Theta \right)\\
 	\\
 	 (1-\hat\alpha_\infty) \beta_x^\infty Q_x & = & \hat\alpha_\infty h_\infty \Upsilon_x -   {h_\infty\Upsilon_x\cos^2\Omega}\sin^2 \varphi_x\\
-	 & = &  h_\infty \Upsilon_x \left( \underbrace{\cos^2\Omega \cos^2\psi + \sin^2\psi}_{\geq \cos^2\Omega} - \underbrace{\cos^2\Omega \cos^2 \varphi_x}_{\leq\cos^2\Omega} \right)\text{ \textcolor{red}{NO!} }\\
+	 & = &  h_\infty \Upsilon_x \left( \underbrace{\cos^2\Omega \cos^2\psi + \sin^2\psi}_{\geq \cos^2\Omega} - \underbrace{\cos^2\Omega \cos^2 \varphi_x}_{\leq\cos^2\Omega} \right)\\
 \end{array}
 \right.
 \end{equation}
